--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/overview.mdx
@@ -1,203 +1,169 @@
 ---
-title: "Agent Optimization"
-description: "Learn about Opik's automated LLM prompt and agent optimization SDK. Discover MetaPrompt, Few-shot Bayesian, and Evolutionary optimization algorithms for enhanced performance."
-keywords: "LLM optimization, prompt engineering, agent optimization, MetaPrompt, Few-shot learning, Bayesian optimization, Evolutionary algorithms, DSPy"
+title: "Opik Agent Optimization Overview"
+subtitle: "Automate enhancing LLM prompts and agent performance."
+description: "Learn about Opik's automated LLM prompt and agent optimization SDK. Discover MetaPrompt, Few-shot Bayesian, MIPRO, and Evolutionary optimization algorithms for enhanced performance."
+keywords: "LLM optimization, prompt engineering, agent optimization, MetaPrompt, Few-shot learning, Bayesian optimization, MIPRO, Evolutionary algorithms, DSPy"
 og:image: "/img/agent_optimization/introducing.png"
 ---
+
+<Warning>
+  Opik Agent Optimizer, including the optimizers described are currently in **Public Beta**. We are actively working on
+  improving these features and welcome your [feedback on GitHub](https://github.com/comet-ml/opik/issues)!
+</Warning>
+
+<Frame>
+  <img src="/img/agent_optimization/introducing.png" alt="Introducing Opik Agent Optimizer" />
+</Frame>
 
 **Opik Agent Optimizer** is a comprehensive toolkit designed to enhance the performance and
 efficiency of your Large Language Model (LLM) applications. Rather than manually editing prompts
 and running evaluation, you can use Opik Agent Optimizer to automatically optimize your prompts.
 
-[//]: # (TODO: Replace with video of the optimizer in action)
 <Frame>
   <img src="/img/agent_optimization/dashboard.png" alt="Opik Agent Optimizer Dashboard" />
 </Frame>
 
-## Getting Started
+## Key Features
 
-Here's a simple step-by-step guide to get you up and running with Opik Agent Optimizer:
+- **Standardized API**: All optimizers follow the same interface for `optimize_prompt()` and `optimize_mcp()` methods
+- **Multiple Optimization Algorithms**: Choose from evolutionary, few-shot, meta-prompt, MIPRO, and GEPA optimizers
+- **Optimizer Chaining**: Results from one optimizer can be used as input for another
+- **MCP Support**: Built-in support for Model Context Protocol tool calling
+- **Consistent Results**: All optimizers return standardized `OptimizationResult` objects
+- **Counter Tracking**: Built-in LLM and tool call counters for monitoring usage
+- **Type Safety**: Full type hints and validation for robust development
+- **Flexible Configuration**: Customize optimization parameters for your specific use case
+- **Comprehensive Evaluation**: Built-in support for various evaluation metrics and datasets
+- **Easy Integration**: Simple API that works with your existing Opik setup
+- **Tool Support**: Optimize prompts for tool-using agents and complex workflows
 
-<Steps>
-  <Step title="1. Set up your account and API key">
-    First, you'll need an Opik account and API key:
-    ```bash
-    # Install Opik and the optimizer package
-    pip install opik opik-optimizer
-    
-    # Configure your API key
-    opik configure
-    ```
-    If you don't have an account yet, [sign up here](https://www.comet.com/signup?from=llm).
-  </Step>
-  <Step title="2. Run the optimization code">
-  
-  The goal of the Opik Agent Optimizer is to allow you to optimize your existing agent, simply pass
-  your prompt or agent to the optimizer:
+## Why optimize prompts ?
 
-  <CodeBlocks>
-      ```python maxLines=1000 title="Optimizing a prompt"
-      import opik
-      from opik.evaluation.metrics import score_result
-      import opik_optimizer
+Prompt engineering is a skill that can be difficult to master as highlighted by
+the [Anthropic](https://docs.anthropic.com/en/docs/build-with-claude/prompt-engineering/overview#how-to-prompt-engineer),
+[OpenAI](https://help.openai.com/en/articles/6654000-best-practices-for-prompt-engineering-with-the-openai-api)
+and [Google](https://www.kaggle.com/whitepaper-prompt-engineering) prompt engineering guides. There
+are a lot of techniques that can be used to help LLMs generate the desired output.
 
-      # Define the prompt to optimize
-      prompt = opik_optimizer.ChatPrompt(
-        messages=[
-          {"role": "system", "content": "You are a helpful assistant."},
-          {"role": "user", "content": "{question}"},
-        ],
-        model="gpt-4o"
-      )
+Prompt optimization solves many of the issues that come with prompt engineering:
 
-      # Define the metric for
-      def short_response(dataset_item, llm_output):
-        if len(llm_output) < 100:
-          return score_result.ScoreResult(name="short_response", value=1, reason="Response is short as expected.")
-        else:
-          return score_result.ScoreResult(name="short_response", value=0, reason="Response is too long.")
+1. Prompt engineering is not easily repeatable or scalable alone
+2. Possible performance degration across models, you need to tune prompts for each model
+3. Optimization may unlock performance, cost and reliability improvements
+4. As systems evolve, manually tuning multiple prompts becomes increasingly difficult
 
-      # Define the dataset to optimize on
-      client = opik.Opik()
-      dataset = client.get_or_create_dataset(name='prompt_optimization')
-      dataset.insert([
-        {"question": "What is agent optimization?"},
-        {"question": "What are best practices for prompt optimization?"},
-      ])
-      
-      # Run the optimizer
-      optimizer = opik_optimizer.HierarchicalReflectiveOptimizer()
-      result = optimizer.optimize_prompt(
-        prompt=prompt,
-        dataset=dataset,
-        metric=short_response,
-        max_trials=1
-      )
+So when should you use prompt optimization?
 
-      result.display()
-      ```
+| **Aspect**    | **Prompt Engineering**                             | **Prompt Optimization**                           |
+| ------------- | -------------------------------------------------- | ------------------------------------------------- |
+| **Scope**     | Broad, includes designing, experimenting, refining | Narrow, improving already existing prompts        |
+| **Goal**      | Create a working prompt for a specific task        | Maximize performance (accuracy, efficiency, etc.) |
+| **Involves**  | Initial drafting, understanding model behavior     | Tweaking wording, structure, or context           |
+| **When used** | Early in task setup or experimentation             | After a baseline prompt is in place               |
 
-      ```python maxLines=1000 title="Agent Optimization"
-      import opik
-      from opik.evaluation.metrics import score_result
-      import opik_optimizer
+## Optimizing a prompt
 
-      # Define the prompt to optimize
-      ## Define a simple tool
-      @opik.track(type="tool")
-      def get_context(question):
-        return "Agent optimization is the process of automatically improving the performance of an agent with Opik."
+You can optimize any prompt in just a few lines of code
 
-      ## Define the prompt and available tools
-      prompt = opik_optimizer.ChatPrompt(
-        messages=[
-          {"role": "system", "content": "You are a helpful assistant."},
-          {"role": "user", "content": "{question}"},
-        ],
-        tools=[
-          {
-            "type": "function",
-            "function": {
-              "name": "get_context",
-              "description": "Always call this tool to get additional context",
-              "parameters": {
-                "type": "object",
-                "properties": {
-                  "question": {
-                    "type": "string",
-                    "description": "The question to get context for"
-                  }
-                }
-              },
-              "required": ["question"]
-            }
-          }
-        ],
-        function_map={
-          "get_context": lambda question: get_context(question)
-        },
-        model="gpt-4o"
-      )
+```python
+import opik_optimizer
+from opik.evaluation.metrics import LevenshteinRatio
 
-      # Define the metric to optimize
-      def short_response(dataset_item, llm_output):
-        if len(llm_output) < 250:
-          return score_result.ScoreResult(
-            name="short_response",
-            value=1,
-            reason="Response is less than 250 characters."
-          )
-        else:
-          return score_result.ScoreResult(
-            name="short_response",
-            value=0,
-            reason="Response is too long, should be less than 250 characters."
-          )
+# Load a demo dataset
+dataset = opik_optimizer.datasets.tiny_test()
 
-      # Define the dataset to optimize on
-      client = opik.Opik()
-      dataset = client.get_or_create_dataset(name='prompt_optimization')
-      dataset.insert([
-        {"question": "What is agent optimization?"},
-        {"question": "What are best practices for prompt optimization?"},
-      ])
+# Define a metric
+def levenshtein_ratio(dataset_item, llm_output):
+    metric = LevenshteinRatio()
+    return metric.score(reference=dataset_item['label'], output=llm_output)
 
-      # Run the optimizer
-      optimizer = opik_optimizer.HierarchicalReflectiveOptimizer()
+# Define the prompt to optimize
+prompt = opik_optimizer.ChatPrompt(
+  messages=[
+    {"role": "system", "content": "You are a helpful assistant."},
+    {"role": "user", "content": "{text}"},
+  ]
+)
 
-      result = optimizer.optimize_prompt(
-        prompt=prompt,
-        dataset=dataset,
-        metric=short_response,
-        max_trials=1
-      )
+# Run the optimization
+optimizer = opik_optimizer.MetaPromptOptimizer(model="openai/gpt-4")
+opt_result = optimizer.optimize_prompt(
+  prompt=prompt,
+  dataset=dataset,
+  metric=levenshtein_ratio,
+  n_samples=100,
+  experiment_config={"task": "overview", "model": "gpt-4"}
+)
 
-      result.display()
-      ```
-  </CodeBlocks>
+print(f"Optimized prompt: {opt_result.prompt}")
+print(f"Score: {opt_result.score}")
+print(f"LLM calls: {opt_result.llm_calls}")
+```
 
-  </Step>
-  <Step title="3. Analyze your results">
-    After optimization completes, you can view results in multiple ways:
-    
-    <Tabs>
-      <Tab value="cli" title="CLI Output">
-        Call `result.display()` to see a summary in your terminal:
-        ```bash
-        result.display()
-        ```
-        <img src="/img/agent_optimization/cli_results.png" alt="CLI optimization results" />
-      </Tab>
-      <Tab value="dashboard" title="Dashboard">
-        View detailed results in the Opik Agent Optimization dashboard:
-        <img src="/img/agent_optimization/dashboard_results.png" alt="Dashboard optimization results" />
-      </Tab>
-      <Tab value="programmatic" title="Programmatic">
-        Access individual result fields programmatically:
-        ```python
-        print(f"Optimized prompt: {result.prompt}")
-        print(f"Score: {result.score}")
-        print(f"Improvement: {result.improvement}")
-        ```
-      </Tab>
-    </Tabs>
-  </Step>
-</Steps>
+You can learn more about running your first optimization in the
+[Quickstart guide](/agent_optimization/opik_optimizer/quickstart).
+
+## Standardized API
+
+All optimizers follow the same interface, making it easy to switch between algorithms or chain them together:
+
+```python
+# All optimizers have the same signature
+def optimize_prompt(
+    self,
+    prompt: ChatPrompt,
+    dataset: Dataset,
+    metric: Callable,
+    experiment_config: dict | None = None,
+    n_samples: int | None = None,
+    auto_continue: bool = False,
+    agent_class: type[OptimizableAgent] | None = None,
+    **kwargs: Any,
+) -> OptimizationResult
+
+# All optimizers return the same result type
+result = optimizer.optimize_prompt(
+    prompt=prompt,
+    dataset=dataset,
+    metric=metric,
+    n_samples=100
+)
+
+# Results can be chained
+chained_result = another_optimizer.optimize_prompt(
+    prompt=ChatPrompt.from_result(result),  # Use previous result
+    dataset=dataset,
+    metric=metric
+)
+```
 
 ## Optimization Algorithms
 
-The optimizer implements both proprietary and open-source optimization algorithms. Each one has it's
-strengths and weaknesses, we recommend first trying out either GEPA or the Hierarchical Reflective
-Optimizer as a first step:
+### Supported algorithms
+
+The [Opik Agent Optimizer](https://pypi.org/project/opik-optimizer/) is an experimental Python
+library that aims at implementing Prompt and Agent Optimization algorithms in a consistent format.
+
+### Requirements
+
+- **Python**: At least 3.10
+- **MCP Support**: MCP tool calling optimization is currently supported by MetaPrompt optimizer only (see [Tool Optimization Guide](/agent_optimization/algorithms/tool_optimization))
+
+<Note>
+  All optimizers leverage **LiteLLM** for broad model compatibility. This means you can use models from OpenAI, Azure,
+  Anthropic, Google, local Ollama instances, and many more. For details on how to specify different models, see the
+  [LiteLLM Support for Optimizers](/agent_optimization/opik_optimizer/litellm_support) guide.
+</Note>
+
+The following algorithms have been implemented:
 
 | **Algorithm**                                                                               | **Description**                                                                                                                                                                                                      |
 | ------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | [MetaPrompt Optimization](/agent_optimization/algorithms/metaprompt_optimizer)              | Uses an LLM ("reasoning model") to critique and iteratively refine an initial instruction prompt. Good for general prompt wording, clarity, and structural improvements. **Supports [MCP tool calling optimization](/agent_optimization/algorithms/tool_optimization).** |
-| [Hierarchical Reflective Optimization](/agent_optimization/algorithms/hierarchical_reflective_optimizer) | Uses hierarchical root cause analysis to systematically improve prompts by analyzing failures in batches, synthesizing findings, and addressing identified failure modes. Best for complex prompts requiring systematic refinement based on understanding why they fail. |
 | [Few-shot Bayesian Optimization](/agent_optimization/algorithms/fewshot_bayesian_optimizer) | Specifically for chat models, this optimizer uses Bayesian optimization (Optuna) to find the optimal number and combination of few-shot examples (demonstrations) to accompany a system prompt.                      |
+| [MIPRO Optimization](/agent_optimization/algorithms/mipro_optimizer)                        | A prompt engineering algorithm that uses a MIPRO (Multi-Instance Prompt Refinement) approach to generate a set of candidate prompts and then uses a Bayesian optimization algorithm to identify the best prompt.     |
 | [Evolutionary Optimization](/agent_optimization/algorithms/evolutionary_optimizer)          | Employs genetic algorithms to evolve a population of prompts. Can discover novel prompt structures and supports multi-objective optimization (e.g., score vs. length). Can use LLMs for advanced mutation/crossover. |
 | [GEPA Optimization](/agent_optimization/algorithms/gepa_optimizer)                   | Wraps the external GEPA package to optimize a single system prompt for single-turn tasks using a reflection model. Requires `pip install gepa`.                                         |
-| [Parameter Optimization](/agent_optimization/algorithms/parameter_optimizer)                   | Optimizes LLM call parameters (temperature, top_p, etc.) using Bayesian optimization. Uses Optuna for efficient parameter search with global and local search phases. Best for tuning model behavior without changing the prompt.                                         |
 
 <Tip>
   If you would like us to implement another optimization algorithm, reach out to us on
@@ -223,27 +189,15 @@ Each optimization algorithm is evaluated against different use-cases and dataset
 4. RagBench: The [ragbench](https://huggingface.co/datasets/wandb/ragbench-sentence-relevance-balanced/discussions)
    dataset contains a set of retrieval (RAG) examples.
 
-Our latest benchmarks shows the following results:
-
-| Rank | Algorithm/Optimizer                  | Average Score | Arc    | GSM8K  | RagBench |
-| ---- | ------------------------------------ | ------------- | ------ | ------ | -------- |
-| 1    | Hierarchical Reflective Optimization | 67.83%        | 92.70% | 28.00% | 82.8%    |
-| 2    | Few-shot Bayesian Optimization       | 59.17%        | 28.09% | 59.26% | 90.15%   |
-| 3    | Evolutionary Optimization            | 52.51%        | 40.00% | 25.53% | 92.00%   |
-| 4    | MetaPrompt Optimization              | 38.75%        | 25.00% | 26.93% | 64.31%   |
-| 5    | GEPA Optimization                    | 32.27%        |  6.55% | 26.08% | 64.17%   |
-| 6    | No optimization                      | 11.85%        |  1.69% | 24.06% |  9.81%   |
+| Rank | Algorithm/Optimizer              | Average Score | Arc    | GSM8K  | medhallu | RagBench |
+| ---- | -------------------------------- | ------------- | ------ | ------ | -------- | -------- |
+| 1    | Few-shot Bayesian Optimization   | 67.33%        | 28.09% | 59.26% | 91.80%   | 90.15%   |
+| 2    | Evolutionary Optimization        | 63.13%        | 40.00% | 25.53% | 95.00%   | 92.00%   |
+| 3    | Mipro Optimization (w/ no tools) | 55.91%        | 19.70% | 39.70% | 92.70%   | 89.28%   |
+| 4    | MetaPrompt Optimization          | 52.01%        | 25.00% | 26.93% | 91.79%   | 64.31%   |
+| 5    | GEPA Optimization                | 46.80%        | 6.55%  | 26.08% | 90.42%   | 64.17%   |
+| 6    | No optimization                  | 11.99%        | 1.69%  | 24.06% | 12.38%   | 9.81%    |
 
 The results above are benchmarks tested against `gpt-4o-mini`, we are using various metrics
 depending on the dataset including Levenshtein Ratio, Answer Relevance and Hallucination. The
 results might change if you use a different model, configuration, dataset and starting prompt(s).
-
-## Next Steps
-
-1. Explore specific [Optimizers](/agent_optimization/overview#optimization-algorithms) for algorithm details.
-2. Refer to the [FAQ](/agent_optimization/faq) for common questions and troubleshooting.
-3. Refer to the [API Reference](/agent_optimization/api-reference) for detailed configuration options.
-
-<Info>
-  🚀 Want to see Opik Agent Optimizer in action? Check out our [Example Projects & Cookbooks](/agent_optimization/optimizer-cookbooks/optimizer_introduction_cookbook) for runnable Colab notebooks covering real-world optimization workflows, including HotPotQA and synthetic data generation.
-</Info>
