--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/overview.mdx
@@ -144,6 +144,10 @@ chained_result = another_optimizer.optimize_prompt(
 The [Opik Agent Optimizer](https://pypi.org/project/opik-optimizer/) is an experimental Python
 library that aims at implementing Prompt and Agent Optimization algorithms in a consistent format.
 
+<Info>
+  For a comprehensive guide to all optimizer-specific parameters, their use cases, and tuning recommendations, see the [Optimizer Parameters Guide](/agent_optimization/algorithms/optimizer_parameters_guide).
+</Info>
+
 ### Requirements
 
 - **Python**: At least 3.10
