--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/optimizer_parameters_guide.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/optimizer_parameters_guide.mdx
@@ -91,34 +91,6 @@ All optimizers inherit from `BaseOptimizer` and support these common parameters:
 - **Max Rounds**: More rounds (5-10) for thorough refinement, fewer (2-3) for quick improvement
 - **Prompts Per Round**: More candidates (6-8) for exploration, fewer (2-4) for focused refinement
 
-### HierarchicalReflectiveOptimizer
-
-**Purpose**: Uses hierarchical root cause analysis to systematically improve prompts by analyzing failures in batches, synthesizing findings, and addressing identified failure modes.
-
-**Specific Parameters:**
-- **`reasoning_model`** (str): Model used for root cause analysis and prompt improvement (e.g., "openai/gpt-4o")
-- **`n_threads`** (int, default: 12): Number of parallel evaluation threads
-- **`max_parallel_batches`** (int, default: 5): Maximum number of batches analyzed in parallel
-- **`batch_size`** (int, default: 25): Number of test cases per batch for root cause analysis
-- **`seed`** (int, default: 42): Random seed for reproducibility
-- **`verbose`** (int, default: 1): Controls internal logging/progress bars (0=off, 1=on)
-
-**Optimization Parameters (via optimize_prompt kwargs):**
-- **`n_trials`** (int, default: 3): Number of optimization trials (iterations)
-- **`max_retries`** (int, default: 2): Maximum retries per failure mode if prompt improvement fails
-
-**Use Cases:**
-- Complex prompts requiring systematic refinement based on understanding failure patterns
-- Tasks where understanding why prompts fail is critical for improvement
-- Scenarios with diverse failure modes that need to be identified and addressed individually
-- When you have sufficient evaluation data to analyze in batches (recommended: 50+ test cases)
-
-**Parameter Tuning:**
-- **Reasoning Model**: Use more capable models (gpt-4o, claude-3.5-sonnet) for better root cause analysis
-- **Batch Size**: Larger batches (30-50) for diverse datasets, smaller (15-25) for focused analysis
-- **Max Parallel Batches**: Increase (8-10) for faster analysis with good API rate limits, decrease (2-3) for limited quotas
-- **N-Trials**: More trials (5-7) for thorough optimization, fewer (2-3) for quick improvement
-
 ### MiproOptimizer
 
 **Purpose**: Implements MIPRO algorithm for complex agent and tool-using prompt optimization.
@@ -126,9 +98,9 @@ All optimizers inherit from `BaseOptimizer` and support these common parameters:
 **Specific Parameters:**
 - **`auto`** (Literal["light", "medium", "heavy"], default: "light"): Optimization intensity level
   - `"light"`: Fast optimization with minimal exploration
-  - `"medium"`: Balanced optimization with moderate exploration
+  - `"medium"`: Balanced optimization with moderate exploration  
   - `"heavy"`: Thorough optimization with extensive exploration
-- **`n_threads`** (int, default: 6): Number of parallel threads for evaluation
+- **`num_threads`** (int, default: 6): Number of parallel threads for evaluation
 - **`verbose`** (int, default: 1): Verbosity level (0=off, 1=on, 2=debug)
 
 **Use Cases:**
@@ -150,10 +122,9 @@ All optimizers inherit from `BaseOptimizer` and support these common parameters:
 - **`verbose`** (int, default: 1): Verbosity level (0=off, 1=on, 2=debug)
 
 **Optimization Parameters (via optimize_prompt kwargs):**
-- **`max_metric_calls`** (int): Effective metric budget used by GEPA (`max_trials × evaluated_samples`). The Opik wrapper still runs its own baseline/final rescoring outside this budget, so plan for those extra evaluations when sizing API usage.
-- **`reflection_minibatch_size`** (int, default: 3): Minimum number of *unique* prompts GEPA must evaluate before it will run a reflection step. If the minibatch size is larger than the available candidates, reflection is skipped entirely.
+- **`max_metric_calls`** (int): Maximum number of metric evaluations (optimization budget)
+- **`reflection_minibatch_size`** (int, default: 3): Items considered per reflection step
 - **`candidate_selection_strategy`** (str, default: "pareto"): Strategy for selecting candidates ("pareto" or "best")
-- **Runtime warnings**: The optimizer emits a warning when `reflection_minibatch_size` exceeds the number of candidates that can be evaluated with the current metric budget (`max_trials`). Reduce the minibatch or increase the budget if you see this message.
 
 **Use Cases:**
 - Single-turn tasks with clear input-output pairs
@@ -165,35 +136,6 @@ All optimizers inherit from `BaseOptimizer` and support these common parameters:
 - **Reflection Model**: Use stronger models (gpt-4, claude-3) for better reflection
 - **Minibatch Size**: Larger batches (5-10) for efficiency, smaller (2-3) for thorough reflection
 
-### ParameterOptimizer
-
-**Purpose**: Optimizes LLM call parameters (temperature, top_p, etc.) using Bayesian optimization without changing the prompt.
-
-**Specific Parameters:**
-- **`default_n_trials`** (int, default: 20): Default number of optimization trials
-- **`n_threads`** (int, default: 4): Number of parallel evaluation threads
-- **`local_search_ratio`** (float, default: 0.3): Ratio of trials dedicated to local search around best parameters
-- **`local_search_scale`** (float, default: 0.2): Scale factor for local search range
-
-**Optimization Parameters (via optimize_parameter kwargs):**
-- **`parameter_space`** (ParameterSearchSpace | dict): Defines parameters to optimize and their ranges
-- **`n_trials`** (int, optional): Number of optimization trials (overrides default_n_trials)
-- **`sampler`** (optuna.samplers.BaseSampler, optional): Custom Optuna sampler
-- **`callbacks`** (list, optional): Optuna callbacks for custom logging/monitoring
-- **`timeout`** (float, optional): Maximum optimization time in seconds
-
-**Use Cases:**
-- Fine-tuning model behavior without changing the prompt
-- Optimizing temperature, top_p, frequency_penalty, and other sampling parameters
-- Finding optimal model parameters for specific tasks
-- A/B testing different parameter configurations
-
-**Parameter Tuning:**
-- **N-Trials**: More trials (50-100) for thorough optimization, fewer (10-30) for quick tuning
-- **Local Search Ratio**: Higher ratios (0.4-0.5) for refinement, lower (0.1-0.2) for exploration
-- **Local Search Scale**: Larger scale (0.3-0.5) for wider local search, smaller (0.1-0.2) for fine-tuning
-- **N-Threads**: Increase for faster evaluation (limited by API rate limits)
-
 ## Parameter Selection Guidelines
 
 ### Task Complexity Assessment
@@ -202,11 +144,6 @@ All optimizers inherit from `BaseOptimizer` and support these common parameters:
 - Use `FewShotBayesianOptimizer` or `MetaPromptOptimizer`
 - Lower parameter values (fewer iterations, smaller populations)
 - Focus on prompt clarity and example selection
-
-**Parameter Tuning** (optimize model behavior without changing prompts):
-- Use `ParameterOptimizer` to tune temperature, top_p, and other sampling parameters
-- Quick optimization with focused parameter space
-- Best when prompt is already good but model behavior needs adjustment
 
 **Complex Tasks** (multi-step, tool usage, agent workflows):
 - Use `MiproOptimizer` or `EvolutionaryOptimizer`
@@ -260,6 +197,7 @@ All optimizers inherit from `BaseOptimizer` and support these common parameters:
 
 ## Next Steps
 
-1. Explore specific [Optimizers](/agent_optimization/overview#optimization-algorithms) for algorithm details.
-2. Refer to the [FAQ](/agent_optimization/faq) for common questions and troubleshooting.
-3. Refer to the [API Reference](/agent_optimization/api-reference) for detailed configuration options.
+- Explore [Optimization Algorithms](/agent_optimization/overview#optimization-algorithms) for detailed algorithm information
+- Try the [Example Projects & Cookbooks](/agent_optimization/opik_optimizer/quickstart) for practical examples
+- Learn about [Dataset Requirements](/agent_optimization/opik_optimizer/datasets) for optimal results
+- Check the [Optimizer & SDK FAQ](/agent_optimization/opik_optimizer/faq) for common questions
