--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/tool_optimization.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/tool_optimization.mdx
@@ -218,6 +218,7 @@ result = optimizer.optimize_prompt(
     dataset=research_dataset,
     metric=research_quality_metric,
     n_samples=100,
+    experiment_config={"task": "research", "model": "gpt-4"},
     max_rounds=5
 )
 
