--- a/apps/opik-documentation/documentation/fern/docs/evaluation/metrics/sycophancy_evaluation.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/metrics/sycophancy_evaluation.mdx
@@ -14,7 +14,7 @@ from opik.evaluation.metrics import SycEval
 
 metric = SycEval(
     model="gemini/gemini-1.5-pro",
-    rebuttal_model="gemini/gemini-2.0-flash"  # optional, default to llama3-8b
+    rebuttal_model="gemini/gemini-2.0-flash"
     rebuttal_type="simple",
     context_mode="in_context"
 )
