--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
@@ -8,14 +8,14 @@ Choosing the right optimizer is easier when you can see which capabilities are c
 below highlights the primary features that customers ask about most often—prompt inputs, agent
 interfaces, tool optimization, and multimodal awareness.
 
-| Optimizer | ChatPrompt Input | OptimizableAgent Support | Function or Tool Use¹ | Prompt Optimization | Tool Signature Optimization² | MCP Tool Optimization (Beta) | Multimodal Heuristics³ |
+| Optimizer | ChatPrompt Input | OptimizableAgent Support | Function or Tool Use¹ | Prompt Optimization | Tool Signature Optimization² | MCP Tool Optimization (Beta) | Multimodal Handling³ |
 | --- | --- | --- | --- | --- | --- | --- | --- |
-| **Hierarchical Reflective** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ⚠️ Manual token caps |
-| **MetaPrompt** | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ | ⚠️ Manual token caps |
-| **Evolutionary** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ✅ Auto context budgeting |
-| **Few-shot Bayesian** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ⚠️ Manual token caps |
-| **GEPA** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ⚠️ Manual token caps |
-| **Parameter** | ✅ | ✅ | ✅ | ❌ LLM parameter search only | ❌ | ❌ | ⚠️ Manual token caps |
+| **Hierarchical Reflective** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ⚠️ Structure guardrails; manual token caps |
+| **MetaPrompt** | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ | ⚠️ Structure guardrails; manual token caps |
+| **Evolutionary** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ✅ Auto context budgeting + structure guardrails |
+| **Few-shot Bayesian** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ⚠️ Structure guardrails; manual token caps |
+| **GEPA** | ✅ | ✅ | ✅ | ✅ | ❌ | ❌ | ⚠️ Structure guardrails; manual token caps |
+| **Parameter** | ✅ | ✅ | ✅ | ❌ LLM parameter search only | ❌ | ❌ | ⚠️ Structure guardrails; manual token caps |
 
 **Legend**
 
@@ -36,9 +36,10 @@ optimizers can still optimize prompts that *use* tools.
 </Info>
 
 <Info>
-³ All optimizers can accept multimodal `ChatPrompt` content. Today the Evolutionary optimizer is the
-only one with built-in heuristics (automatic token budgeting and mutation rules) for image/video
-payloads; the rest require you to set conservative `model_parameters` manually.
+³ All optimizers accept multimodal `ChatPrompt` content and now share the same structure-preservation
+guardrails so attachments (image/video/audio/file parts) aren’t dropped during edits. The Evolutionary optimizer also
+auto-budgets tokens for large attachments; every other optimizer still requires you to set conservative
+`model_parameters` (e.g., `max_tokens`/`max_completion_tokens`) manually.
 </Info>
 
 Need more detail? Jump back to the [algorithm deep dive section](/agent_optimization/overview#optimization-algorithms)
