--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Optimizer Feature Matrix"
-subtitle: "At-a-glance view of what each optimizer supports"
-description: "Compare Opik Agent Optimizer algorithms across prompt formats, tool support, and advanced capabilities such as MCP tool optimization or multimodal awareness."
+title: "Optimizer Capabilities"
+subtitle: "At-a-glance view of supported features"
+description: "See which Opik Agent Optimizer algorithms cover ChatPrompt inputs, agents, tool use, MCP workflows, and multimodal content."
 ---
 
 Choosing the right optimizer is easier when you can see which capabilities are covered. The table
@@ -9,7 +9,7 @@ below highlights the primary features that customers ask about most often—prom
 interfaces, tool optimization, and multimodal awareness.
 
 | Optimizer | ChatPrompt Input | OptimizableAgent Support | Function or Tool Use¹ | MCP Tool Use | Prompt Optimization | Tool Signature Optimization² | MCP Optimization | Multimodal Input³ |
-| --- | --- | --- | --- | --- | --- | --- | --- |
+| --- | --- | --- | --- | --- | --- | --- | --- | --- |
 | **Evolutionary** | ✅ | ✅ | ✅ | ❌ | ✅ | ❌ | ❌ | ✅ |
 | **Few-shot Bayesian** | ✅ | ✅ | ✅ | ❌ | ✅ | ❌ | ❌ | ✅ |
 | **GEPA** | ✅ | ✅ | ✅ | ❌ | ✅ | ❌ | ❌ | ✅ |
