--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
@@ -4,30 +4,28 @@ subtitle: "At-a-glance view of supported features"
 description: "See which Opik Agent Optimizer algorithms cover ChatPrompt inputs, agents, tool use, MCP workflows, and multimodal content."
 ---
 
-Choosing the right optimizer is easier when you can see which capabilities are covered. This page
-is an Explanation/Reference matrix that compares each optimizer’s supported features when run inside
-the Opik Optimizer SDK (some capabilities, like MCP integration and tool signature editing, are provided by the Opik
-framework itself). Start by finding the algorithm you’re evaluating, then scan across to confirm it meets your ChatPrompt,
-tool, MCP, and multimodal requirements before reading the detailed algorithm pages.
+Choosing the right optimizer is easier when you can see which capabilities are supported. This page
+is an Explanation/Reference matrix for the Opik Optimizer SDK; some capabilities (like MCP integration or tool signature editing)
+are provided by the SDK and surfaced only through certain algorithms.
 
-<Callout>
-  <strong>Tip:</strong> Use the “Function or Tool Use” column for standard function-calling agents, the “MCP Tool Use” column when you need MCP-specific flows, and “MCP Optimization” when you
-  want the optimizer to change tool signatures.
-</Callout>
+Use this table by scanning down the feature list and reading across to confirm which algorithm satisfies your Chat Prompt, agent,
+tool, MCP, and multimodal requirements before diving into the detailed algorithm docs.
 
-| Optimizer | ChatPrompt Input | OptimizableAgent Support | Function or Tool Use¹ | MCP Tool Use | Prompt Optimization | Tool Signature Optimization² | MCP Optimization | Multimodal Input |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| **Evolutionary** | ✅ | ✅ | ✅ | ❌ | ✅ | ❌ | ❌ | ✅ |
-| **Few-shot Bayesian** | ✅ | ✅ | ✅ | ❌ | ✅ | ❌ | ❌ | ✅ |
-| **GEPA** | ✅ | ✅ | ✅ | ❌ | ✅ | ❌ | ❌ | ✅ |
-| **Hierarchical Reflective** | ✅ | ✅ | ✅ | ❌ | ✅ | ❌ | ❌ | ✅ |
-| **MetaPrompt** | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
-| **Parameter** | ✅ | ✅ | ✅ | ❌ | n/a | ❌ | ❌ | ✅ |
+| Feature | Evolutionary | Few-shot | GEPA | Hierarchical | MetaPrompt | Parameter |
+| --- | --- | --- | --- | --- | --- | --- |
+| Chat Prompt | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
+| Use Agent Frameworks | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
+| Function or Tool Use¹ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
+| MCP Tool Use | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
+| Prompt Editing | ✅ | ✅ | ✅ | ✅ | ✅ | n/a |
+| Tool Signature Editing² | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
+| MCP Workflow Editing | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
+| Multimodal Input | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
 
 **Legend**
 
 - ✅ — Supported out of the box
-- ⚠️ — Works, but requires manual configuration (e.g., set `max_tokens` yourself)
+- ⚠️ — Works, but requires manual configuration
 - ❌ — Not supported today
 
 <AccordionGroup>
