--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
@@ -11,7 +11,7 @@ are provided by the SDK and surfaced only through certain algorithms.
 Use this table by scanning down the feature list and reading across to confirm which algorithm satisfies your Chat Prompt, agent,
 tool, MCP, and multimodal requirements before diving into the detailed algorithm docs.
 
-| Feature | Evolutionary | Few-shot | GEPA | Hierarchical | MetaPrompt | Parameter |
+| Feature | Evolutionary | Few Shot | GEPA | Hierarchical | MetaPrompt | Parameter |
 | --- | --- | --- | --- | --- | --- | --- |
 | Chat Prompt | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
 | Use Agent Frameworks | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
@@ -20,7 +20,7 @@ tool, MCP, and multimodal requirements before diving into the detailed algorithm
 | Prompt Editing | ✅ | ✅ | ✅ | ✅ | ✅ | n/a |
 | Tool Signature Editing² | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
 | MCP Workflow Editing | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
-| Multimodal Input | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
+| Multimodal Input | ✅ | ❌ | ✅ | ✅ | ✅ | ✅ |
 
 **Legend**
 
