--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/features.mdx
@@ -15,11 +15,11 @@ tool, MCP, and multimodal requirements before diving into the detailed algorithm
 | --- | --- | --- | --- | --- | --- | --- |
 | Chat Prompt | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
 | Use Agent Frameworks | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
-| Function or Tool Use¹ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
+| Function & Tool Use¹ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
 | MCP Tool Use | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
 | Prompt Editing | ✅ | ✅ | ✅ | ✅ | ✅ | n/a |
-| Tool Signature Editing² | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
-| MCP Workflow Editing | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
+| Tool Editing² | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
+| MCP Editing | ❌ | ❌ | ❌ | ❌ | ✅ | ❌ |
 | Multimodal Input | ✅ | ❌ | ✅ | ✅ | ✅ | ✅ |
 
 **Legend**
