docs: cleanup and typo's

--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/concepts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/concepts.mdx
@@ -60,7 +60,8 @@ examples, or tool interactions.
   </Accordion>
   <Accordion title="Optimization Trial">
     Each optimization run is made up of one or more optimization trials. A trial corresponds to a
-    single evaluation of a candidate prompt or prompt configuration. You can few each
+    single evaluation of a candidate prompt or prompt configuration. You can view each trial's prompt,
+    score, and reasoning history inside the Opik UI to understand optimizer progress.
   </Accordion>
   <Accordion title="Prompt model">
   The model that is used to evaluate the prompt. This is the model that you use the prompt with,
