--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/overview.mdx
@@ -10,6 +10,7 @@ efficiency of your Large Language Model (LLM) applications. Rather than manually
 and running evaluation, you can use Opik Agent Optimizer to automatically optimize your prompts.
 
 [//]: # (TODO: Replace with video of the optimizer in action)
+Get a feel for the optimizer dashboard experience:
 
 <Frame>
   <img src="/img/agent_optimization/dashboard.png" alt="Opik Agent Optimizer Dashboard" />
